[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "metdesk-jc"
version = "1.0.0"
authors = [
    {name = "Jay Cork", email = "jaycork93@gmail.com"},
]
description = "This is the description"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.scripts]
metdesk-jc = "metdesk_jc.runner:main"

dependencies = [
    "prettytable >= 3.5.0"
]